--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,12 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <!-- json dependency for serialising joda date time -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-joda</artifactId>
+            <version>2.15.2</version>
+        </dependency>
     </dependencies>
 
     <build>
