--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,16 @@
             <artifactId>jackson-datatype-joda</artifactId>
             <version>2.15.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.12.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.konghq</groupId>
+            <artifactId>unirest-java</artifactId>
+            <version>3.11.06</version>
+        </dependency>
     </dependencies>
 
     <build>
