--- a/.github/workflows/htRest-deploy.yml
+++ b/.github/workflows/htRest-deploy.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 jobs:
 
   package:
-    name: Maven Package (no tests) 
+    name: Maven Package
     runs-on: ubuntu-latest
 
     steps:
@@ -17,3 +17,17 @@ jobs:
           cache: 'maven'
       - name: Maven Package
         run: mvn -B clean package -DskipTests
+  test:
+    name: Maven Tests
+    needs: package
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          cache: 'maven'
+      - name: Maven Verify
+        run: mvn -B clean verify
