--- a/pom.xml
+++ b/pom.xml
@@ -191,7 +191,7 @@
                 <version>2.22.2</version>
                 <configuration>
                     <includes>
-                        <include>**/*Test.java</include>
+                        <include>**/*Test*</include>
                         <include>*Test</include>
                     </includes>
                 </configuration>
