--- a/.github/workflows/htRest-deploy.yml
+++ b/.github/workflows/htRest-deploy.yml
@@ -40,5 +40,7 @@ jobs:
        - uses: actions/checkout@v3
        - uses: devtomio/action-railway@v1.1.4
          name: Deploy to Railway
+         with:
+          service: healthtrackerrest
          env:
            RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}  
