--- a/.github/workflows/htRest-deploy.yml
+++ b/.github/workflows/htRest-deploy.yml
@@ -40,7 +40,6 @@ jobs:
        - uses: actions/checkout@v3
        - uses: devtomio/action-railway@v1.1.4
          name: Deploy to Railway
-         with:
-          service: healthtrackerrest
          env:
+           RAILWAY_SERVICE: healthtrackerrest
            RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}  
