--- a/.github/workflows/htRest-deploy.yml
+++ b/.github/workflows/htRest-deploy.yml
@@ -38,8 +38,7 @@ jobs:
     
     steps:
        - uses: actions/checkout@v3
-       - uses: devtomio/action-railway@v1.1.4
+       - uses: devtomio/action-railway@v1.1.4 --service healthtrackerrest
          name: Deploy to Railway
          env:
-           RAILWAY_SERVICE: healthtrackerrest
            RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}  
