--- a/.github/workflows/htRest-deploy.yml
+++ b/.github/workflows/htRest-deploy.yml
@@ -37,8 +37,19 @@ jobs:
     runs-on: ubuntu-latest  
     
     steps:
-       - uses: actions/checkout@v3
-       - uses: devtomio/action-railway@v1.1.4 --service healthtrackerrest
-         name: Deploy to Railway
-         env:
-           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}  
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '14'
+
+      - name: Install Railway CLI
+        run: npm install -g railway
+
+      - name: Authenticate with Railway
+        run: railway login --api ${{ secrets.RAILWAY_API_TOKEN }}
+
+      - name: Deploy to Service A
+        run: railway up -s healthtrackerrest
