--- a/.github/workflows/htRest-deploy.yml
+++ b/.github/workflows/htRest-deploy.yml
@@ -4,36 +4,36 @@ on: [push, pull_request]
 
 jobs:
 
-  package:
-    name: Maven Package
-    runs-on: ubuntu-latest
+#  package:
+#    name: Maven Package
+#    runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-          cache: 'maven'
-      - name: Maven Package
-        run: mvn -B clean package -DskipTests
-  test:
-    name: Maven Tests
-    needs: package
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-          cache: 'maven'
-      - name: Maven Verify
-        run: mvn -B clean verify
+#    steps:
+#      - uses: actions/checkout@v3
+#      - uses: actions/setup-java@v3
+#        with:
+#          distribution: 'temurin'
+#          java-version: '17'
+#          cache: 'maven'
+#      - name: Maven Package
+#        run: mvn -B clean package -DskipTests
+#  test:
+#    name: Maven Tests
+#    needs: package
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - uses: actions/checkout@v3
+#      - uses: actions/setup-java@v3
+#        with:
+#          distribution: 'temurin'
+#          java-version: '17'
+#          cache: 'maven'
+#      - name: Maven Verify
+#        run: mvn -B clean verify
   deploy:
     name: Railway Deploy
-    needs: test
+#    needs: test
     runs-on: ubuntu-latest  
     
     steps:
@@ -49,7 +49,7 @@ jobs:
         run: npm install -g railway
 
       - name: Authenticate with Railway
-        run: railway login --api ${{ secrets.RAILWAY_API_TOKEN }}
+        run: export RAILWAY_TOKEN= ${{ secrets.RAILWAY_API_TOKEN }}
 
       - name: Deploy to Service A
         run: railway up -s healthtrackerrest
