--- a/.github/workflows/htRest-deploy.yml
+++ b/.github/workflows/htRest-deploy.yml
@@ -36,20 +36,25 @@ jobs:
 #    needs: test
     runs-on: ubuntu-latest  
     
-    steps:
-      - name: Checkout code
+        steps:
+      - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - name: Use Node 12
+        uses: actions/setup-node@v1
         with:
-          node-version: '14'
+          node-version: 12.x
 
-      - name: Install Railway CLI
-        run: npm install -g railway
+      - name: Install packages
+        run: yarn install --frozen-lockfile
 
-      - name: Authenticate with Railway
-        run: export RAILWAY_TOKEN= ${{ secrets.RAILWAY_API_TOKEN }}
+      - name: Run tests
+        run: yarn test
 
-      - name: Deploy to Service A
+      - name: Install Railway
+        run: npm i -g @railway/cli
+
+      - name: Deploy
         run: railway up -s healthtrackerrest
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
